# scipy_2026_causal_inference_tutorial

./: 01_student.ipynb  01_teacher.ipynb  02_student.ipynb  02_teacher.ipynb  README.md  google_slides.txt  makefile  pyproject.toml
admin/: submission.md
notebooks/01_causal_graphs/: 01_student.py  01_teacher.py
notebooks/02_simple_estimator/: 02_student.py  02_teacher.py
notebooks/03_dowhy/: 03_student.py  03_teacher.py
notebooks/04_causal_impact/: 04_student.py  04_teacher.py
slides/: package-lock.json
slides/Introduction to Causal Inference/: package-lock.json  package.json  slides.md  style.css
slides/Introduction to Causal Inference/setup/: shiki.ts
